# openquest

./: .pre-commit-config.yaml  AGENT_PLAN.md  README.md
backend/: .env.example  .gitignore  CONTRIBUTION_HEATMAP.md  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/controllers/: __init__.py  agent_controller.py  auth_controller.py  contribution_controller.py  github_oauth_controller.py  issue_controller.py  repo_controller.py
backend/app/dao/: __init__.py  agent_session_dao.py  base.py  user_preference_dao.py
backend/app/dto/: __init__.py  agent_dto.py  auth_dto.py  contribution_dto.py  issue_dto.py  repo_dto.py  user_dto.py
backend/app/models/: __init__.py  user_preference.py
backend/app/services/: __init__.py  agent_service.py  agent_tools.py  auth_service.py  contribution_service.py  github_oauth_service.py  github_service.py  issue_service.py  openrouter_service.py  prompt_service.py  repo_service.py
backend/app/utils/: __init__.py  dependencies.py  exceptions.py  supabase_client.py
backend/migrations/: 001_create_agent_sessions.sql  001_create_user_preferences.sql  002_fix_issue_number_type.sql  003_add_github_fields.sql  004_fix_agent_sessions_rls.sql  005_fix_user_preferences_rls.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: SelectionCard.tsx  SelectionChip.tsx  StepIndicator.tsx
frontend/src/components/dashboard/: ContributionHeatmap.tsx  EditPreferencesDialog.tsx  LeaderboardDialog.tsx  ProfileLevelSection.tsx  ProfileSidebar.tsx  RanksDialog.tsx  RepoCard.tsx  SignOutDialog.tsx  XPProgressBar.tsx
frontend/src/components/observability/: AITerminalRunner.tsx
frontend/src/components/steps/: CreateAccountStep.tsx  ExperienceStep.tsx  FrameworksStep.tsx  GitHubConnectStep.tsx  IssueTypesStep.tsx  LanguagesStep.tsx  ProjectTypesStep.tsx  SkillsStep.tsx  SummaryStep.tsx  WelcomeStep.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  progress.tsx  separator.tsx
frontend/src/hooks/: useAuth.ts  useGitHubOAuth.ts  useIssues.ts  useRepos.ts
frontend/src/lib/: api.ts  sse.ts
frontend/src/pages/: Dashboard.tsx  GitHubCallback.tsx  Index.tsx  IssueAnalysis.tsx  Issues.tsx  Landing.tsx  Login.tsx
frontend/src/store/: authStore.ts  levelingStore.ts  preferencesStore.ts
frontend/src/types/: api.ts
